# quickbite

./: .env.example  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 21e35aa7568b_tables_with_index.py
app/: database.py  dependencies.py  models.py  settings.py  tasks.py  timestamp_mixin.py  utils.py
app/routers/: auth.py  items.py  orders.py  restaurant.py  users.py
app/schemas/: assignment.py  auth.py  item.py  order_item.py  password.py  restaurant.py  user.py
