[project]
name = "quickbite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.116.1",
    "geoalchemy>=0.7.2",
    "geoalchemy2>=0.18.0",
    "passlib>=1.7.4",
    "python-dotenv>=1.1.1",
    "sqlalchemy[asyncio]>=2.0.41",
]
